--- a/devtools/conda-envs/meta.yaml
+++ b/devtools/conda-envs/meta.yaml
@@ -3,6 +3,7 @@ name: test
 channels:
   - conda-forge
   - defaults
+  - simonboothroyd
 
 dependencies:
 
@@ -10,27 +11,26 @@ dependencies:
   - python
   - pip
 
-  - openff-toolkit-base >=0.9.2
-  - pytorch
-  - pydantic
   - click
 
-  # --------- openff-system ---------
-  - openff-utilities
-  - pint
-  # --------- openff-system ---------
+  - openff-toolkit-base >=0.9.2
+  - openff-interchange ==0.1.0
 
-  # --------- openff-qcsubmit ---------
-  - qcportal
-  - torsiondrive
-  - cachetools
-  - tqdm
-  - pyyaml
-  # --------- openff-qcsubmit ---------
+  - openff-utilities
+  - openff-units
+
+  - openff-qcsubmit >= 0.2.2
+
+  - smirnoffee
+  - pytorch >= 1.9.0
+
+  - pydantic
 
     # Optional dependencies
   - rdkit
   - ambertools
+
+  - geometric
 
     # Testing
   - pytest
@@ -41,10 +41,3 @@ dependencies:
   - isort
   - black
   - flake8
-
-  - pip:
-
-      - git+git://github.com/openforcefield/openff-units.git
-      - git+git://github.com/openforcefield/openff-system.git
-      - git+git://github.com/openforcefield/openff-qcsubmit.git
-      - git+git://github.com/SimonBoothroyd/smirnoffee.git
