--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -32,13 +32,16 @@ jobs:
         run: |
           isort --recursive --check-only descent
           isort --recursive --check-only examples
+          isort --recursive --check-only integration-tests
 
       - name: Run black
         run: |
           black descent --check
           black examples --check
+          black integration-tests --check
 
       - name: Run flake8
         run: |
           flake8 descent
           flake8 examples
+          flake8 integration-tests
