Add verbose option to energy objectives from QC results

--- a/devtools/conda-envs/meta.yaml
+++ b/devtools/conda-envs/meta.yaml
@@ -11,8 +11,7 @@ dependencies:
   - python
   - pip
   - dill
-
-  - click
+  - tqdm
 
   - openff-toolkit-base >=0.9.2
   - openff-interchange ==0.1.0
