--- a/setup.cfg
+++ b/setup.cfg
@@ -28,13 +28,13 @@ force_grid_wrap=0
 use_parentheses=True
 line_length=88
 known_third_party=
-    click
     dill
     geometric
     openff
     pydantic
     smirnoffee
     torch
+    tqdm
 
 [versioneer]
 # Automatic version numbering scheme
