--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ omit =
 
 [coverage:report]
 exclude_lines =
+    @overload
     pragma: no cover
     raise NotImplementedError
     if __name__ == .__main__.:
