Add dimer fitting target (#44)

--- a/devtools/envs/base.yaml
+++ b/devtools/envs/base.yaml
@@ -13,11 +13,14 @@ dependencies:
 
   - pytorch
   - pydantic
+  - pyarrow
 
   ### Levenberg Marquardt
   - scipy
 
   # Optional packages
+  - rdkit
+  - matplotlib-base
 
   # Examples
   - jupyter
