--- a/devtools/envs/base.yaml
+++ b/devtools/envs/base.yaml
@@ -52,3 +52,14 @@ dependencies:
   - pytest-mock
 
   - codecov
+
+  # Docs
+  - mkdocs
+  - mkdocs-material
+  - mkdocs-gen-files
+  - mkdocs-literate-nav
+  - mkdocs-jupyter
+  - mkdocstrings
+  - mkdocstrings-python
+  - black
+  - mike
