--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,13 +5,17 @@ repo_url: "https://github.com/SimonBoothroyd/descent"
 repo_name: "SimonBoothroyd/descent"
 site_dir: "site"
 watch: [mkdocs.yml, README.md, descent/, docs]
-copyright: Copyright &copy; 2023 Simon Boothroyd
+copyright: Copyright &copy; 2024 Simon Boothroyd
 edit_uri: edit/main/docs/
 
 validation:
   omitted_files: warn
   absolute_links: warn
   unrecognized_links: warn
+
+extra:
+  version:
+    provider: mike
 
 nav:
 - Home:
@@ -36,10 +40,6 @@ theme:
   - search.suggest
   - toc.follow
   palette:
-  - media: "(prefers-color-scheme)"
-    toggle:
-      icon: material/brightness-auto
-      name: Switch to light mode
   - media: "(prefers-color-scheme: light)"
     scheme: default
     primary: teal
@@ -53,10 +53,11 @@ theme:
     accent: lime
     toggle:
       icon: material/weather-night
-      name: Switch to system preference
+      name: Switch to light mode
 
 markdown_extensions:
 - attr_list
+- md_in_html
 - def_list
 - admonition
 - footnotes
@@ -91,6 +92,8 @@ plugins:
     handlers:
       python:
         paths: [descent/]
+        import:
+         - http://docs.openmm.org/latest/api-python/objects.inv
         options:
           # extensions: [ griffe_pydantic ]
           docstring_options:
@@ -98,7 +101,6 @@ plugins:
             returns_multiple_items: false
             returns_named_value: false
           docstring_section_style: list
-          filters: ["!^_"]
           heading_level: 1
           inherited_members: true
           merge_init_into_class: true
@@ -108,6 +110,7 @@ plugins:
           show_signature_annotations: true
           show_symbol_type_heading: true
           show_symbol_type_toc: true
+          show_if_no_docstring: false
           signature_crossrefs: true
           summary: true
           members_order: source
