--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,38 +1,15 @@
 repos:
   - repo: local
     hooks:
-      - id: isort
-        name: "[Package] Import formatting"
+      - id: ruff
+        name: "[Package] Formatting"
         language: system
-        entry: isort
+        entry: ruff
+        args: [ check ]
         files: \.py$
 
-      - id: black
-        name: "[Package] Code formatting"
+      - id: ruff-examples
+        name: "[Examples] Formatting"
         language: system
-        entry: black
-        files: \.py$
-
-      - id: flake8
-        name: "[Package] Linting"
-        language: system
-        entry: flake8
-        files: \.py$
-
-      - id: isort-examples
-        name: "[Examples] Import formatting"
-        language: system
-        entry: nbqa isort
-        files: examples/.+\.ipynb$
-
-      - id: black-examples
-        name: "[Examples] Code formatting"
-        language: system
-        entry: nbqa black
-        files: examples/.+\.ipynb$
-
-      - id: flake8-examples
-        name: "[Examples] Linting"
-        language: system
-        entry: nbqa flake8 --ignore=E402
+        entry: nbqa ruff
         files: examples/.+\.ipynb$
