--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,16 +31,10 @@ versionfile_build = "descent/_version.py"
 tag_prefix = ""
 parentdir_prefix = "descent-"
 
-[tool.black]
-line-length = 88
-
-[tool.isort]
-profile = "black"
-
-[tool.flake8]
-max-line-length = 88
-ignore = ["E203", "E266", "E501", "W503"]
-select = ["B","C","E","F","W","T4","B9"]
+[tool.ruff.lint]
+ignore = ["C901"]
+select = ["B","C","E","F","W","B9"]
+ignore-init-module-imports = true
 
 [tool.coverage.run]
 omit = ["**/tests/*", "**/_version.py"]
