--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,8 +84,8 @@ plugins:
 - gen-files:
     scripts:
     - docs/scripts/gen_ref_pages.py
-- mkdocs-jupyter:
-    include: [ "examples/*.ipynb" ]
+#- mkdocs-jupyter:
+#    include: [ "examples/*.ipynb" ]
 - literate-nav:
     nav_file: SUMMARY.md
 - mkdocstrings:
