Swap to `setuptools-scm`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel", "versioneer"]
+requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel", "versioneer"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -12,29 +12,21 @@ readme = "README.md"
 requires-python = ">=3.10"
 classifiers = ["Programming Language :: Python :: 3"]
 
-[tool.setuptools]
-zip-safe = false
-include-package-data = true
-
-[tool.setuptools.dynamic]
-version = {attr = "descent.__version__"}
-
 [tool.setuptools.packages.find]
-namespaces = true
-where = ["."]
+include = ["descent*"]
 
-[tool.versioneer]
-VCS = "git"
-style = "pep440"
-versionfile_source = "descent/_version.py"
-versionfile_build = "descent/_version.py"
-tag_prefix = ""
-parentdir_prefix = "descent-"
+[tool.setuptools_scm]
+
+[tool.ruff]
+extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
 ignore = ["C901"]
 select = ["B","C","E","F","W","B9"]
 ignore-init-module-imports = true
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.coverage.run]
 omit = ["**/tests/*", "**/_version.py"]
