--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,9 @@ jobs:
         make lint
         make test
         make docs-build
+        
+        mamba install --name descent --yes "pydantic <2"
+        make test
 
     - name: CodeCov
       uses: codecov/codecov-action@v3.1.1
