--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,13 +24,14 @@ jobs:
         make env
         make lint
         make test
-        make docs-build
+        make docs
         
         mamba install --name descent --yes "pydantic <2"
         make test
 
     - name: CodeCov
-      uses: codecov/codecov-action@v3.1.1
+      uses: codecov/codecov-action@v4.1.1
       with:
         file: ./coverage.xml
         flags: unittests
+        token: ${{ secrets.CODECOV_TOKEN }}
